--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,9 +2,13 @@
   "name": "front-end-v2",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.x",
+    "npm": ">=10.9.2"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build ",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,7 +37,6 @@
     "react-dnd-multi-backend": "^9.0.0",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.3.1",
-    "react-tailwindcss-datepicker": "^1.7.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -44,8 +47,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
